# aether

./: .gitignore  agent.py  client.py  config.py  events.py  main.py  prices.toml  pyproject.toml
cli/: renderer.py
context/: compactor.py  loop_detector.py
docs/superpowers/plans/: 2026-07-12-phase-4-gateway-depth.md  2026-07-13-agentic-search-tools.md
docs/superpowers/specs/: 2026-07-12-phase-4-gateway-depth-design.md  2026-07-13-agentic-search-tools-design.md
evals/: runner.py  tasks.py
gateway/: breaker.py  cache.py  client.py  config.py  ledger.py  metrics.py  models.py  ratelimit.py  server.py  translate.py
tests/: conftest.py  test_agent.py  test_client.py  test_compactor.py  test_config.py  test_eval_runner.py  test_gateway_breaker.py  test_gateway_cache.py  test_gateway_config.py  test_gateway_ledger.py  test_gateway_metrics.py  test_gateway_ratelimit.py  test_gateway_semantic.py  test_gateway_server_chain.py  test_hooks.py  test_loop_detector.py  test_registry.py  test_renderer.py  test_search_tools.py  test_tool_loader.py  test_tools.py
tools/: __init__.py  base.py  edit_file.py  fs.py  glob.py  grep.py  hooks.py  list_dir.py  loader.py  read_file.py  registry.py  run_shell.py  traversal.py  write_file.py
