[project]
name = "forge"
version = "0.1.0"
description = "Agentic CLI coding assistant"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.57.0",
    "google-genai>=1.30.0",
    "cohere>=5.17.0",
    "mistralai>=1.9.0",
    "together>=1.5.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "fakeredis>=2.20.0",
]

[project.scripts]
forge = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]